--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,19 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   http: ^1.2.2
-  path_provider: ^2.1.5
-  share: ^2.0.4
+
   animation_wrappers: ^3.0.0
+  path_provider: 2.1.5
+  shared_preferences: ^2.3.3
+  popover: ^0.3.0+1
+  permission_handler: ^11.3.1
+  url_launcher: ^6.3.1
+  flutter_spinkit: ^5.2.1
+  flutter_dotenv: ^5.2.1
+  share_plus: ^10.1.2
+  image_gallery_saver_plus: ^3.0.5
+
+
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +59,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: 0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -61,9 +72,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/images/
+     - .env
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -90,3 +102,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  remove_alpha_ios: true
